--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,8 +1,3 @@
-.content {
-	width: 1024px;
-	margin-left: auto;
-	margin-right: auto;
-}
 
 @font-face {
     font-family: georgia_font;
@@ -34,6 +29,18 @@ body.pictures {
 	background: url('../images/pkisses_button-enter_overlay.png');
 }
 
+.send_button {
+	margin-left: auto;
+	margin-right: auto;
+	width: 174px;
+	height: 47px;
+	background: url('../images/pkisses_button-send.png');
+}
+.send_button_hover {
+	background: url('../images/pkisses_button-send_overlay.png');
+}
+
+
 .fb_button {
 	display: inline;
 	float: right;
@@ -42,11 +49,6 @@ body.pictures {
 	background: url('../images/pkisses_button-facebook.png');	
 }
 .fb_button_hover {
-	display: inline;
-	float: right;
-
-	width: 54px;
-	height: 49px;
 	background: url('../images/pkisses_button-facebook_overlay.png');
 }
 
@@ -55,13 +57,10 @@ body.pictures {
 	float: right;
 	width: 54px;
 	height: 49px;
+	margin-left: 10px;
 	background: url('../images/pkisses_button-twitter.png');
 }
 .twitter_button_hover {
-	display: inline;
-	float: right;
-	width: 54px;
-	height: 49px;
 	background: url('../images/pkisses_button-twitter_overlay.png');
 }
 .arrow_right {
@@ -70,8 +69,6 @@ body.pictures {
 	background: url('../images/pkisses_button-arrow_right.png');
 }
 .arrow_right_hover {
-	width: 32px;
-	height: 47px;
 	background: url('../images/pkisses_button-arrow_right_overlay.png');
 }
 .arrow_left {
@@ -80,8 +77,6 @@ body.pictures {
 	background: url('../images/pkisses_button-arrow_left.png');
 }
 .arrow_left_hover {
-	width: 32px;
-	height: 47px;
 	background: url('../images/pkisses_button-arrow_left_overlay.png');
 }
 
@@ -90,27 +85,37 @@ body.pictures {
   padding: 0px;
 	z-index: 999;
 	width: 32px;
-	height: 500px;
-	margin-top: 300px;
-	position: absolute;
+	height: 47px;
+	margin-top: 350px;
+	position: relative;
 }
 
 .left_gutter {
+	float: left;
 }
 
 .right_gutter {
-  margin-left: 992px;
+	float: right;
 }
 
 .header_controls {
-	width: 1024px;	
+	margin-top: 20px;
 	height: 80px;
 	margin-right: auto;
 	margin-left: auto;
 }
+
+.content {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+
 .container {
 	width: 1024px;
 	height: 768px;
+	margin-left:auto;
+	margin-right: auto;
 }
 
 .page_scroll {
